# blockchain_ui_tests

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
pages/: transaction_page.py
test/: test_transaction.py
