[tool.poetry]
name = "blockchain-ui-tests"
version = "0.1.0"
description = "Dependencies for the project"
authors = ["Prateek Mishra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.1"
selenium = "4.9.0"
webdriver-manager = "^4.0.0"
urllib3 = "1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
